Changelog for MyUSB:
=======================================

	Version 1.5.3 - UNRELEASED:
	--------------------------------------------
		* Removed unused Wheel usage from the mouse demos

	Version 1.5.2 - Released 31st July, 2008:
	--------------------------------------------
		* Fixed SwapEndian_32() function in Common.h so that it now works correctly (wrong parameter types)
		* Updated RNDIS demo - notification endpoint is no longer blocking so that it works with faulty Linux RNDIS
		  implementations (where the notification endpoint is ignored in favour of polling the control endpoint)
		* Fixed incorrect Vendor Description string return size in RNDIS demo for the OID_GEN_VENDOR_DESCRIPTION OID token
		* Added very basic TCP/IP stack and HTTP/TELNET servers to RNDIS demo
		* Fixed DFU bootloader exit causing programming software to complain about failed writes
		* Fixed DFU bootloader EEPROM programming mode wiping first flash page
		* Fixed Clear/Set Feature device standard request processing code (fixing MassStorage demo in the process)
		* Added support for the ATMEGA16U4 AVR microcontroller
		* Library licence changed from LGPLv3 to MIT license

	Version 1.5.1 - Released 8th July, 2008:
	--------------------------------------------
		* Changed host demos to enable the host function task on the firing of the USB_DeviceEnumerationComplete event
		  rather than the USB_DeviceAttached event
		* HID Usage Stack now forcefully cleared after an IN/OUT/FEATURE item has been completely processed to remove
		  any referenced but not created usages
		* Changed USB_INT_DisableAllInterrupts() and USB_INT_ClearAllInterrupts(), USB_Host_GetNextDescriptorOfType(),
		  USB_Host_GetNextDescriptorOfTypeBefore(), USB_Host_GetNextDescriptorOfTypeAfter() to normal functions (from inline)
		* Fixed USBtoSerial demo not sending data, only receiving
		* Fixed main makefile to make all by default, fixed MagStripe directory case to prevent case-sensitive path problems