@@ -34,8 +34,6 @@
 	/* Includes: */
 		#include <MyUSB/Drivers/USB/USB.h>
 
-		#include <avr/pgmspace.h>
-
 	/* Macros: */
 		#define CDC_FUNCTIONAL_DESCRIPTOR(size)                      \
 		     struct                                                  \
