@@ -4,6 +4,7 @@ Changelog for MyUSB:
 	Version 1.5.3 - UNRELEASED:
 	--------------------------------------------
 		* Removed unused Wheel usage from the mouse demos
+		* Fixed CDC bootloader using pgmspace macros for some descriptors inappropriately
 
 	Version 1.5.2 - Released 31st July, 2008:
 	--------------------------------------------
